--- a/index.html
+++ b/index.html
@@ -1,9 +1,9 @@
 <html>
 <head>
 <body>
-<h1>Personal site of Chris Guo</h1>
+<h1>Welcome to Chris Guo's homepage</h1>
 <hr>
-<a href="fabric-sdk-node/index.html">fabric-sdk-node</a>
+<a href="fabric-sdk-node/index.html">Generated fabric-sdk-node API reference</a>
 </body>
 </head>
 </html>
