--- a/index.html
+++ b/index.html
@@ -3,7 +3,11 @@
 <body>
 <h1>Welcome to Chris Guo's homepage</h1>
 <hr>
-<a href="fabric-sdk-node/index.html">Generated fabric-sdk-node API reference</a>
+<p>
+  <a href="fabric-sdk-node/index.html">Generated fabric-sdk-node API reference</a>
+</p>
+<br>
+<a href="https://github.com/chrisguoado">@chrisguoado</a>
 </body>
 </head>
 </html>
